assets/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@100;200;300;400;500;600;700;800;900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Varela+Round:wght@100;200;300;400;500;600;700;800;900&display=swap');

:root {
  --bezier: cubic-bezier(.25, .46, .45, .94);
  --clr-main: 239, 239, 239;
  --clr-sec: 216, 216, 216;
  --background: linear-gradient(135deg, rgb(var(--clr-sec)), rgb(var(--clr-main)));
  --nav-background: linear-gradient(135deg, rgb(var(--clr-sec), 120), rgb(var(--clr-main), 120));
  --light-background: #c7c7c7;
  --text-clr: #181818;
  --accent-pink: 197, 24, 154;
  --accent-purple: 129, 0, 189;
  --accent-orange: 209, 120, 4;
  --accent-red: 211, 26, 26;
  --accent-aqua: 31, 190, 253;
  --accent-blue: 77, 33, 236;
  --accent-gradient: linear-gradient(to right, rgb(var(--accent-pink)), rgb(var(--accent-purple)));
  --accent2-gradient: linear-gradient(to left, rgb(var(--accent-orange)), rgb(var(--accent-red)));
  --accent3-gradient: linear-gradient(to left, rgb(var(--accent-aqua)), rgb(var(--accent-blue)));
  --font-smooth: 'Varela Round', 'Bahnschrift', 'Segoe UI', sans-serif;
  --font-rough: 'Exo 2', 'Segoe UI', 'Times New Roman', Times, serif;
  
  font-family: var(--font-smooth);
  font-size: 16px;
  text-shadow: 2px 2px 2px rgb(rgb(232, 232, 232));
  
  color-scheme: light;
  color: var(--text-clr);
  background: var(--background);
}

main {
  position: relative;
  width: 100%;
  height: 100%;
  top: 12vh;
  margin-bottom: 32vh;
}

.main-wrapper {
  position: relative;
}

.title {
  display: flex;
  place-items: center;
  flex-direction: column;
  gap: 2rem;

  margin: 0 auto;
  width: 90vw;
}

.title > .text {
  grid-row: span 2;
  margin-bottom: 2em;
}

.intro {
  font-family: var(--font-rough);
  font-size: clamp(5em, 10vw, 4em);
  text-align: center;
  font-weight: 600;

  word-wrap: break-word;
}

.description {
  font-size: clamp(1.2em, 3vw, 1.7em);
}

.intro,
.description span {
  background: var(--accent-gradient);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.description span.accent2 {
  background: var(--accent2-gradient);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.description span.accent3 {
  background: var(--accent3-gradient);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.scene {
  position: relative;
  aspect-ratio: 1 / 1;
  width: clamp(21rem, 65vw, 30rem);
  
  overflow: hidden;
  grid-area: scene;
  --svg-size: clamp(3.3rem, 32.5vw, 20rem);
  
  border-radius: 10%;
  background-color: #e9ebf6;
  box-shadow:
    0 0 90px 10px rgba(var(--accent-purple), 0.344),
    0 0 900px 20px rgba(var(--accent-pink), 0.344);
}

.fragment-bg {
  position: absolute;
  padding: clamp(4rem, 3vw, 8rem);
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;

  display: grid;
  justify-content: center;
  justify-items: center;
  align-items: center;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(2, 1fr);
  gap: clamp(0.5rem, 3vw, 2rem);
  
  background: linear-gradient(135deg, rgb(98, 0, 234), rgb(236, 64, 122));
  opacity: 0;
}

.fragment-bg > i {
  font-size: clamp(3em, 15vw, 6em);
  opacity: 0.45;
}

.fragment {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  display: grid;
  grid-template-columns: repeat(7, 1fr);
  grid-template-rows: repeat(7, 1fr);
}

.fr {
  z-index: 175;
}

.animate-box {
  width: var(--svg-size);
  height: var(--svg-size);
  position: relative;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.svg-container {
  width: var(--svg-size);
  height: var(--svg-size);
}

.sun-circle {
  fill: #5c6bc0;
}

.moon-shadow {
  fill: #5c6bc0;
}

.sun-rays {
  stroke: #5c6bc0;
  stroke-width: 8;
  stroke-linecap: round;
}

#projects {
  position: relative;
  display: block;
  width: min(90vw, 1100px);
  margin: 0 auto;
  margin-bottom: 5vh;
}

.project-wrapper {
  padding: 0 0 4em 0;
  margin: 0 auto;
  overflow: none;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 3em;

  transition: transform 500ms var(--bezier);
}

.project {
  position: relative;
  background: rgb(var(--clr-main));
  width: 100%;
  max-height: 500px;
  padding: 3em;
  border-radius: 20px;

  transition: box-shadow 150ms var(--bezier), border 250ms var(--bezier);
}

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {
  main {
    top: 25vh;
    margin-bottom: 48vh;
  }

  .intro {
    text-align: left;
  }
  
  .scene {
    width: clamp(21rem, 65vw, 30rem);
  }

  .title {
    display: grid;
    grid-template-areas:
        "intro scene scene"
        "intro scene scene"; 
    gap: 6rem;
    place-items: center;
    max-width: 80%;
    margin: 0 auto;
  }
  
  .project {
    display: grid; 
    grid-template-columns: auto auto; 
    grid-template-rows: 0.3fr 0.6fr 2.4fr;
    gap: 0px 0px; 
    min-height: 500px;
    min-width: 100%;
    grid-template-areas: 
      "type img"
      "name img"
      "desc img";
  }

  .project img {
    display: block !important;
    position: relative !important;
    max-height: 80%;
    padding: 2em;
    border-radius: 42px;
    justify-self: end; 
    grid-area: img;
  }
}

.project:is(:hover, :focus) {
  box-shadow:
    0 0 20px 10px rgba(var(--accent-purple), 0.344),
    0 0 150px 20px rgba(var(--accent-pink), 0.344);
}

.project h1 {
  position: relative;
  display: block;
  font-size: clamp(1em, 8vw, 2.6em);
  color: var(--text-clr);
  grid-area: name;
}

.project p {
  position: relative;
  display: block;
  font-size: clamp(0.6em, 5vw, 1.1em);
  color: var(--text-clr);
  grid-area: desc;
}

.project h3 {
  position: relative;
  display: block;
  font-size: clamp(0.8em, 5vw, 1.4em);
  color: var(--text-clr);
  text-transform: uppercase;
  grid-area: type;
}

.project img {
  display: none;
  position: absolute;
}

#footer {
  font-size: clamp(0.50em, 3vw, 1em);
  margin: 2em 0 2em 0;
  display: flex;
  justify-content: center;
  text-align: center;
}

#footer a {
  color: #6264d3;
}

nav {
  position: fixed;
  width: 100%;

  background: var(--nav-background);
  box-shadow:
    0 0 30px 10px rgba(var(--accent-purple), 0.144);
  z-index: 900;
}

.navigation {
  display: flex;
  align-items: flex-start;
  justify-content: space-around;

  margin: 0 auto;
  padding: 0;
  width: min(90vw, 1200px);
}

.navitem:not(:first-child) {
  margin-left: 20px;
}

.navitem[data-social="true"] {
  height: 100%;
  padding-top: 5px;
}

.navitem a {
  position: relative;
  display: block;
  padding: 1.3em 0;
  font-size: 1.1em;
}

.navitem span {
  display: block;
  padding-bottom: 2px;
  
  background: var(--accent-gradient);
  background-size: 0 0.2em;
  background-position: 0 100%;
  background-repeat: no-repeat;
  
  transition: color 75ms var(--bezier),
    background-size 250ms var(--bezier),
    transform 125ms var(--bezier);
}

.navitem a:hover span,
.navitem a:focus span {
  background-size: 100% 0.2em;
  
  transform: rotate(-3deg);
  -webkit-transform: rotate(-3deg);
  -moz-transform: rotate(-3deg);
  -ms-transform: rotate(-3deg);
  -o-transform: rotate(-3deg);
}

.portfolio-drop {
  position: absolute;
  background: var(--nav-background);
  padding: 0 18px;
  border-radius: 10px;
  opacity: 0;
  pointer-events: none;
  
  transition: opacity 250ms var(--bezier);
}

.portfolio:hover .portfolio-drop {
  opacity: 1;
  pointer-events: all;
}

.portfolio-drop > li > a {
  padding: 0.77em 0;
}

/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (min-width: 600px) {
  .navitem {
    margin-left: 20px;
  }
  
  .navitem[data-social="true"] {
    margin-right: 20px;
  }
}
/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
  
}

/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {

}

